modules/gdscript/tests/scripts/analyzer/errors/use_value_of_void_function_native_method.gd
func test():
	var obj := Node.new()
	print(obj.free()) # Native type method.
